chore(sass): test styles

--- a/_sass/abstracts/_mixins.scss
+++ b/_sass/abstracts/_mixins.scss
@@ -52,7 +52,11 @@
 @mixin prompt($type, $fa-content, $fa-style: 'solid', $rotate: 0) {
   &.prompt-#{$type} {
     background-color: var(--prompt-#{$type}-bg);
+    border: 1px solid var(--prompt-#{$type}-border);
 
+    & strong {
+      color: var(--prompt-#{$type}-border);
+    }
     &::before {
       content: $fa-content;
       color: var(--prompt-#{$type}-icon-color);
