--- a/_sass/layout/_topbar.scss
+++ b/_sass/layout/_topbar.scss
@@ -5,7 +5,8 @@
 
 #topbar-wrapper {
   height: v.$topbar-height;
-  background-color: var(--topbar-bg);
+  // background-color: var(--topbar-bg);
+  background-color: var(--main-bg);
 
   @include bp.lt(bp.get(lg)) {
     @include mx.slide(top 0.2s ease);
