--- a/_sass/abstracts/_variables.scss
+++ b/_sass/abstracts/_variables.scss
@@ -11,20 +11,24 @@ $topbar-height: 3rem !default;
 $search-max-width: 200px !default;
 $footer-height: 5rem !default;
 $footer-height-large: 6rem !default; /* screen width: < 850px */
-$main-content-max-width: 1250px !default;
+$main-content-max-width: 1350px !default;
 $radius-sm: 6px !default;
 $radius-lg: 10px !default;
 $back2top-size: 2.75rem !default;
 
 /* syntax highlight */
 
-$code-font-size: 0.85rem !default;
+$code-font-size: 0.9rem !default;
 $code-header-height: 2.25rem !default;
 $code-dot-size: 0.75rem !default;
 $code-dot-gap: 0.5rem !default;
 $code-icon-width: 1.75rem !default;
+$code-bg: #9000;
 
 /* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Metrophobic&display=swap');
 
-$font-family-base: 'Source Sans Pro', 'Microsoft Yahei', sans-serif !default;
-$font-family-heading: Lato, 'Microsoft Yahei', sans-serif !default;
+// $font-family-base: 'Source Sans Pro', 'Microsoft Yahei', sans-serif !default;
+$font-family-base: "Metrophobic", sans-serif !default;
+// $font-family-heading: Lato, 'Microsoft Yahei', sans-serif !default;
+$font-family-heading: ui-sans-serif, 'Microsoft Yahei', sans-serif !default;
