--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -291,7 +291,7 @@ main {
   width: 100%;
   height: 100%;
   margin-bottom: 1rem;
-  aspect-ratio: 16 / 9;
+  // aspect-ratio: 16 / 9;
 
   @extend %rounded;
 
