--- a/_sass/base/_syntax.scss
+++ b/_sass/base/_syntax.scss
@@ -137,11 +137,11 @@ div[class^='language-'] {
         width: v.$code-dot-size;
         height: v.$code-dot-size;
         border-radius: 50%;
-        background-color: var(--code-header-muted-color);
+        background-color: #de6d59;
         box-shadow: (v.$code-dot-size + v.$code-dot-gap) 0 0
-            var(--code-header-muted-color),
+            #edc039,
           (v.$code-dot-size + v.$code-dot-gap) * 2 0 0
-            var(--code-header-muted-color);
+            #78c244;
       }
 
       span {
@@ -183,6 +183,7 @@ div {
   height: v.$code-header-height;
   margin-left: 0.75rem;
   margin-right: 0.25rem;
+  border-bottom: 1px solid var(--language-border-color);
 
   /* the label block */
   span {
