--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -2,6 +2,7 @@
 @forward 'components';
 @forward 'layout';
 @forward 'pages';
+@use './abstracts/variables' as v;
 
 .icon-wrapper {
   display: flex;
@@ -36,5 +37,35 @@
 	}
 }
 
+.vscode-icons--file-type-json-official {
+  display: inline-block;
+  width: 0.9em;
+  height: 0.9rem;
+  vertical-align: middle;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cdefs%3E%3ClinearGradient id='SVGNn96vdsT' x1='-683.873' x2='-664.125' y1='-565.884' y2='-585.635' gradientTransform='matrix(.999 0 0 -.999 688.969 -558.754)' gradientUnits='userSpaceOnUse'%3E%3Cstop offset='0'/%3E%3Cstop offset='1' stop-color='%23fff'/%3E%3C/linearGradient%3E%3ClinearGradient id='SVGJNFsKd3D' x1='-663.231' x2='-682.979' y1='-584.741' y2='-564.99' href='%23SVGNn96vdsT'/%3E%3C/defs%3E%3Cpath fill='url(%23SVGNn96vdsT)' d='M15.976 22.842c6.195 8.445 12.257-2.357 12.248-8.853c-.01-7.679-7.794-11.972-12.253-11.972A14.116 14.116 0 0 0 2 16.024C2 25.018 9.812 30 15.971 30c-1.394-.2-6.039-1.2-6.1-11.894c-.042-7.236 2.36-10.126 6.091-8.855a7.11 7.11 0 0 1 4.115 6.816a7.13 7.13 0 0 1-4.101 6.775'/%3E%3Cpath fill='url(%23SVGJNFsKd3D)' d='M15.969 9.245c-4.093-1.411-9.108 1.963-9.108 8.72C6.862 29 15.038 30 16.029 30A14.116 14.116 0 0 0 30 15.994C30 7 22.188 2.017 16.029 2.017c1.706-.236 9.195 1.846 9.195 12.081c0 6.675-5.592 10.308-9.229 8.756a7.11 7.11 0 0 1-4.115-6.816a7.17 7.17 0 0 1 4.089-6.793'/%3E%3C/svg%3E");
+}
 
+.file-viewer.editor-container::before {
+  content: '';
+  display: inline-block;
+  margin-left: 0.8rem;
+  z-index: 9999;
+  position: absolute;
+  top: 8px;
+  left: 0;
+  width: v.$code-dot-size;
+  height: v.$code-dot-size;
+  border-radius: 50%;
+  background-color: #de6d59;
+  box-shadow: (v.$code-dot-size + v.$code-dot-gap) 0 0
+      #edc039,
+    (v.$code-dot-size + v.$code-dot-gap) * 2 0 0
+      #78c244;
+}
 
+dt {
+  color: var(--heading-color-title);
+  font-weight: normal;
+}
