--- a/_sass/themes/_light.scss
+++ b/_sass/themes/_light.scss
@@ -9,6 +9,8 @@
   --text-muted-color: #757575;
   --text-muted-highlight-color: inherit;
   --heading-color: #2a2a2a;
+  --heading-color-title: #334a7c;
+  --heading-color-title-2: #0a86a8;
   --label-color: #585858;
   --blockquote-border-color: #eeeeee;
   --blockquote-text-color: #757575;
@@ -100,7 +102,7 @@
 
   /* --- Custom code light mode colors --- */
   --language-border-color: #ececec;
-  --highlight-bg-color: #f6f8fa;
+  --highlight-bg-color: #ffffff;
   --highlighter-rouge-color: #3f596f;
   --highlight-lineno-color: #9e9e9e;
   --inline-code-bg: rgba(25, 25, 28, 0.05);
