--- a/_includes/embed/video.html
+++ b/_includes/embed/video.html
@@ -33,7 +33,7 @@
 {% endif %}
 
 <p>
-  <video class="embed-video file" {{ poster }} {{ attributes }}>
+  <video class="embed-video file shadow" {{ poster }} {{ attributes }}>
     {% assign extension = video_url | split: '.' | last %}
     {% assign types = extension | concat: types %}
 
