--- a/_includes/head.html
+++ b/_includes/head.html
@@ -96,7 +96,7 @@
     <!-- Image Popup -->
     <link rel="stylesheet" href="{{ site.data.origin[type].glightbox.css | relative_url }}">
   {% endif %}
-  <link id="hljs-style" rel="stylesheet">
+  <link id="hljs-style" rel="stylesheet" href="">
 
   <!-- Scripts -->
 
